--- a/flask_api/Dockerfile
+++ b/flask_api/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3.7
 
 ARG project_dir=/app/
 
-# ADD requirements.txt $project_dir
+ADD requirements.txt $project_dir
 # ADD app/reply.py $project_dir
 
 WORKDIR $project_dir
 
-RUN pip install flask
-# RUN pip install -r requirements.txt
+# RUN pip install flask
+RUN pip install -r requirements.txt
 
 CMD ["python", "-u","reply.py"]
